--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 .home{
     background-color: black;
+    
 
+}
+ul{
+    list-style-type: none;
+    overflow: hidden;
+    background-color: rgb(44, 40, 40);
 }
