--- a/styles.css
+++ b/styles.css
@@ -7,4 +7,12 @@ ul{
     list-style-type: none;
     overflow: hidden;
     background-color: rgb(44, 40, 40);
+} 
+li a{
+    float: left;
+    text-align: center;
+    display: block;
+    color: white;
+    padding: 25px;
+    text-decoration: none;
 }
