--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@
     
 
 }
-ul{
+#home{
     list-style-type: none;
-    overflow: hidden;
+    overflow:hidden;
     background-color: rgb(44, 40, 40);
-} 
+}
+
 li a{
     float: left;
     text-align: center;
@@ -15,4 +16,7 @@ li a{
     color: white;
     padding: 25px;
     text-decoration: none;
+}
+li a:hover{
+    background-color: black;
 }
