--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ li a:hover{
 }
 th{
     width: max-content;
+    color: blue;
    
     
 }
@@ -24,4 +25,5 @@ tr{
     width: max-content;
     border: 2px;
     border-color: aqua;
+    color: blueviolet;
 }
