--- a/style.css
+++ b/style.css
@@ -27,3 +27,16 @@ tr{
     border-color: aqua;
     color: blueviolet;
 }
+.Home{
+    background-color: black;
+}
+.Personal{
+    background-color: black;
+}
+.Contact{
+    background-color: black;
+}
+.Project{
+    background-color: black;
+}
+
