--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ ul{
     list-style-type: none;
     overflow:hidden;
     background-color: rgb(44, 40, 40);
-    width: auto;
+    width: max-content;
 }
 
 li a{
